Fix related tasks list being too large

--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -173,6 +173,10 @@
   padding: 1em;
   color: $text;
 
+  .task {
+    max-width: 500px;
+  }
+
   @media screen and (max-width: 800px) {
     border-radius: 0;
     padding-top: 2rem;
